--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,11 @@ knitr::opts_chunk$set(
   warning = FALSE,
   message = FALSE
 )
+
+library(climateR)
 ```
 
-# climateR
+# Welcome!
 
 <!-- badges: start -->
  [![DOI](https://zenodo.org/badge/158620263.svg)](https://zenodo.org/badge/latestdoi/158620263)
@@ -26,9 +28,10 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/mikejohnson51/climateR/branch/master/graph/badge.svg?token=7zs6C91SDw)](https://codecov.io/gh/mikejohnson51/climateR)
 <!-- badges: end -->
 
+
 `climateR` simplifies the steps needed to get climate data into R. At its core it provides three main things:
 
-1. A catalog of over 100,000k datasets from over 2,000 data providers/archives. See (climateR::params)
+1. A catalog of over 100,000k datasets from over 2,000 data providers/archives. See (`climateR::params`)
 
 ```{r}
 nrow(params)
@@ -36,12 +39,16 @@ length(unique(params$id))
 length(unique(params$asset))
 ```
 
-This catalog is an ever evolving, set of documented and federated datasets that can be accessed by the data access utilites.
+This catalog is an [evolving, federated collection of datasets](https://github.com/mikejohnson51/climateR-catalogs) that can be accessed by the data access utilities.
 
-2. A general [toolkit for accessing remote and local gridded data](docs/reference/index.html#data-access) files bounded by space, time, and variable constraints (`dap`, `dap_crop`, `read_dap_file`)
+2. A general [toolkit for accessing remote and local gridded data](https://mikejohnson51.github.io/climateR/reference/index.html#data-access) files bounded by space, time, and variable constraints (`dap`, `dap_crop`, `read_dap_file`)
 
 
-3. A set of [shortcuts](docs/reference/index.html#shortcuts) that implement these methods for a core set of selected catalog elements
+3. A set of [shortcuts](https://mikejohnson51.github.io/climateR/reference/index.html#shortcuts) that implement these methods for a core set of selected catalog elements
+
+
+> :warning: **Python Users**: Access the to data catalogs is available through the USGS [`gdptools`](https://gdptools.readthedocs.io/en/latest/) package. Directly analogous climateR functionality can be found in [`climtePy`](https://github.com/LynkerIntel/climatePy)
+
 
 # Installation
 
@@ -52,8 +59,7 @@ remotes::install_github("mikejohnson51/climateR")
 
 # Basic Usage
 
-## Rainfall from GridMet for Colorado
-### October 29,1991 - November 6, 1991
+Finding rainfall in Colorado between October 29,1991 - November 6, 1991. The source dataset for this example uses the getGridMET shortcut.
 
 ```{r}
 library(AOI)
@@ -61,16 +67,32 @@ library(terra)
 library(climateR)
 
 AOI = aoi_get(state = "CO", county = "all")
+```
+
+```{r, echo = FALSE}
 plot(AOI$geometry)
 ```
 
 ```{r}
-d = getGridMET(AOI,
+system.time({
+  d = getGridMET(AOI,
                varname = "pr",
                startDate = "1991-10-29",
                endDate  = "1991-11-06")
+})
+```
 
+```{r,echo = FALSE}
 plot(d$precipitation_amount)
 ```
 
+# Integration with 
+```{r}
+system.time({
+  county = zonal::execute_zonal(d, geom = AOI, ID = "fip_code")
+})
+```
 
+```{r, echo = FALSE}
+plot(county[grepl("pr_", names(county))])
+```
