--- a/vignettes/02-catalogs.Rmd
+++ b/vignettes/02-catalogs.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "climateR Catalogs"
 author:
+  - name: "Mike Johnson"
+    url: https://github.com/mikejohnson51
+    affiliation: Lynker
+    affiliation_url: https://lynker.com
+
   - name: "Justin Singh-Mohudpur"
     url: https://github.com/program--
     affiliation: Lynker
     affiliation_url: https://lynker.com
+  
 output: distill::distill_article
 ---
 
