update tests to avoid geocoding, catch sfc and sfg objects in SpatVect conversion

--- a/vignettes/01-intro.Rmd
+++ b/vignettes/01-intro.Rmd
@@ -83,7 +83,7 @@ ggplot() +
     palette = "muted",
     na.value = "white"
   ) + 
-  geom_sf(data = AOI::aoi_get(state  = c("CO", "NM", "AZ", "UT")), fill = NA) + 
+  geom_sf(data = aoi_get(state  = c("CO", "NM", "AZ", "UT")), fill = NA) + 
   theme_minimal()
 ```
 
